# ProcessLauncher

./: CMakeLists.txt  README.md  README.ru.md
.github/workflows/: build.yml
packaging/windows/: installer.iss
qml/: AppButton.qml  Main.qml  ProcessRow.qml
src/: apppaths.cpp  apppaths.h  autostartmanager.cpp  autostartmanager.h  eventlog.cpp  eventlog.h  hotkeymanager.cpp  hotkeymanager.h  iconprovider.cpp  iconprovider.h  jobcontroller.cpp  jobcontroller.h  main.cpp  processfiltermodel.cpp  processfiltermodel.h  processlistmodel.cpp  processlistmodel.h  processmanager.cpp  processmanager.h  schedulemodel.cpp  schedulemodel.h  shortcutresolver.cpp  shortcutresolver.h  startupmanager.cpp  startupmanager.h  traycontroller.cpp  traycontroller.h  updatechecker.cpp  updatechecker.h  windowstate.cpp  windowstate.h
theme/: CMakeLists.txt  Theme.qml  TypeScale.qml
